[gd_scene load_steps=14 format=3 uid="uid://cmyjsqt6idilt"]

[ext_resource type="Texture2D" uid="uid://cv3gquuloagcv" path="res://interfaces/HUD/assets/textures/headsup_panel.png" id="1_mn5ua"]
[ext_resource type="Script" path="res://interfaces/HUD/hud.gd" id="1_yy7wq"]
[ext_resource type="Theme" uid="uid://cgfdgl4ihd081" path="res://assets/themes/td_theme.tres" id="2_itll1"]
[ext_resource type="Texture2D" uid="uid://d4c51lqtqgi8d" path="res://interfaces/HUD/assets/textures/tower_icon.png" id="2_mdkkp"]
[ext_resource type="Texture2D" uid="uid://byfsni62bnnso" path="res://interfaces/HUD/assets/textures/lifebar_window.png" id="3_3fdlk"]
[ext_resource type="Texture2D" uid="uid://b3k3dvxq7kud" path="res://interfaces/HUD/assets/textures/lifebar.png" id="4_mlvjf"]
[ext_resource type="Texture2D" uid="uid://cmfwrpuk3xmij" path="res://interfaces/HUD/assets/textures/coin_icon.png" id="5_5kl3n"]
[ext_resource type="Texture2D" uid="uid://1vslx0kwx2ql" path="res://interfaces/HUD/assets/textures/currency_window.png" id="6_11lp7"]
[ext_resource type="PackedScene" uid="uid://jmm71rgqfd1r" path="res://interfaces/UI/game_over/game_over.tscn" id="9_vrddp"]
[ext_resource type="PackedScene" uid="uid://dln6ttdt8iopd" path="res://interfaces/UI/pause/pause.tscn" id="10_h1mxi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6t2jm"]
content_margin_left = 15.0
content_margin_top = 45.0
content_margin_right = 30.0
content_margin_bottom = 30.0
texture = ExtResource("1_mn5ua")
margin_top = 29.0
margin_right = 16.0
margin_bottom = 13.0
region_rect = Rect2(0, 0, 344, 175)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nmveo"]
content_margin_left = 15.0
content_margin_top = 3.0
content_margin_right = 7.0
texture = ExtResource("6_11lp7")
margin_left = 8.0
region_rect = Rect2(0, 0, 237, 40)
modulate_color = Color(1, 1, 1, 0.627451)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hx4j"]

[node name="Hud" type="CanvasLayer"]
layer = 5
script = ExtResource("1_yy7wq")

[node name="Info" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_itll1")

[node name="PanelContainer" type="PanelContainer" parent="Info"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_top = 8.0
offset_right = 77.0
offset_bottom = 159.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_styles/panel = SubResource("StyleBoxTexture_6t2jm")
metadata/_edit_layout_mode = 1

[node name="Rows" type="VBoxContainer" parent="Info/PanelContainer"]
offset_left = 15.0
offset_top = 45.0
offset_right = 311.0
offset_bottom = 128.0

[node name="Health" type="HBoxContainer" parent="Info/PanelContainer/Rows"]
offset_right = 296.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Info/PanelContainer/Rows/Health"]
offset_right = 51.0
offset_bottom = 40.0
texture = ExtResource("2_mdkkp")
stretch_mode = 3

[node name="HealthBar" type="TextureProgressBar" parent="Info/PanelContainer/Rows/Health"]
offset_left = 55.0
offset_right = 296.0
offset_bottom = 40.0
size_flags_horizontal = 10
value = 100.0
texture_under = ExtResource("3_3fdlk")
texture_progress = ExtResource("4_mlvjf")
texture_progress_offset = Vector2(4, 4)

[node name="Money" type="HBoxContainer" parent="Info/PanelContainer/Rows"]
offset_top = 44.0
offset_right = 296.0
offset_bottom = 83.0

[node name="Icon" type="TextureRect" parent="Info/PanelContainer/Rows/Money"]
offset_right = 51.0
offset_bottom = 39.0
texture = ExtResource("5_5kl3n")
stretch_mode = 3

[node name="Label" type="Label" parent="Info/PanelContainer/Rows/Money"]
offset_left = 55.0
offset_top = 2.0
offset_right = 296.0
offset_bottom = 37.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_nmveo")
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="Info"]
offset_left = 11.0
offset_top = 8.0
offset_right = 155.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_nmveo")
text = "Wave: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWave" type="PanelContainer" parent="Info"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 72.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("2_itll1")
theme_override_styles/panel = SubResource("StyleBoxTexture_nmveo")

[node name="Rows" type="HBoxContainer" parent="Info/NextWave"]
offset_left = 15.0
offset_top = 3.0
offset_right = 337.0
offset_bottom = 64.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Info/NextWave/Rows"]
offset_top = 11.0
offset_right = 262.0
offset_bottom = 49.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_8hx4j")
text = "Next wave in:"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="Info/NextWave/Rows"]
offset_left = 282.0
offset_top = 6.0
offset_right = 315.0
offset_bottom = 55.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_8hx4j")
text = "5"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Info/NextWave"]
one_shot = true

[node name="UI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameOver" parent="UI" instance=ExtResource("9_vrddp")]
visible = false
offset_left = 469.0
offset_top = 288.5
offset_right = 811.0
offset_bottom = 431.5

[node name="Pause" parent="UI" instance=ExtResource("10_h1mxi")]
visible = false

[connection signal="timeout" from="Info/NextWave/Timer" to="." method="_on_timer_timeout"]
